this is my site.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellpaddin="20">
         <tbody>
             <tr>
-                <td><img src="https://th.bing.com/th/id/OIP.4_aGPIkds1n-IDHittWo-QHaE8?pid=ImgDet&rs=1" alt="Flower image" ><br></td>
+                <td><img src="20211017_22341216.jpg" alt="Flower image" ><br></td>
                 <td> 
                     <h1>Sameer</h1>
                     <p><em>I'm a b.tech student in <strong> PCE,PURNEA </strong></em></p>
@@ -20,19 +20,19 @@
         </tbody>
     </table>
     <hr size="4" noshade="0">
-    <h3>Books</h3>
+    <h3>Subject i'm studying</h3>
     <ul>
-       <li> The first point </li>
-       <li>The second point</li>
-       <li>The third point </li>
+       <li> Engineering mathematics </li>
+       <li> C++</li>
+       <li> HTML and CSS </li>
     </ul>
     <ol type="i">
-        <li>The first line</li>
-        <li>The second line </li>
-        <li>The third line </li>
+        <li> HTML</li>
+        <li>CSS </li>
+        <li> JS </li>
         <ul>
-            <li>This is point of point</li>
-            <li>bas try kar rha hun </li>
+            <li>Help to make our site work</li>
+            <li> ye padha jayega next month mai </li>
         </ul>
     </ol>
     <hr size="5" noshade="0">
@@ -51,6 +51,10 @@
             <tr>
                 <td>2021</td>
                 <td>12th</td>
+            </tr>
+            <tr> 
+                <td> 2022-2026 </td>
+                <td> B.tech </td>
             </tr>
         </tbody>
       
