--- a/new2.html
+++ b/new2.html
@@ -9,11 +9,11 @@
 <body>
     <form action="mailto:sameeriit2021@gmail.com" method="post">
         <label >Name:</label>
-        <input type="text" ><br>
+        <input type="text" name="Name" ><br>
         <Label>Email:</Label>
-        <input type="email" ><br>
+        <input type="email" name="Email" ><br>
         <label>Msg:</label>
-        <textarea  cols="30" rows="10"></textarea><br>
+        <textarea  cols="30" rows="10" name="Msg"></textarea><br>
         <input type="submit">
     </form>
 </body>
