--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <td> 
                     <h1>Sameer</h1>
                     <p><em>I'm a b.tech student in <strong> PCE,PURNEA </strong></em></p>
-                    <p>I'm the student at pce,PURNEA. My branch is Eletrical Engineering and aim is to get a IT job as a devloper </p>
+                    <p>I'm the student at pce,PURNEA. My branch is Eletrical Engineering and aim is to get a IT job as a developer </p>
                 </td>
             </tr>
         </tbody>
